<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/share_item"
        android:checkable="true"
        android:enabled="false"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/remove_item"
        android:checkable="false"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/item_id_out" />
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:menuCategory="alternative"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />


</menu>