<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.weige.UI.ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/id"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:gravity="center"
            android:id="@+id/text_input_layout_add_bill_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:counterOverflowTextAppearance="@style/TextOverCount"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_phone_bill"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"

                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/message"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:gravity="center"
            android:id="@+id/text_input_layout_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterOverflowTextAppearance="@style/TextOverCount"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/message"
                android:inputType="textLongMessage" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/address2" />

        <com.google.android.material.textfield.TextInputLayout
            android:gravity="center"
            android:id="@+id/text_input_layout_add_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:passwordToggleEnabled="true"
            app:counterOverflowTextAppearance="@style/TextOverCount"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_to_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/address"
                android:inputType="textLongMessage" />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/get_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/demo_bg"
            android:lineSpacingExtra="10sp"
            android:text="@string/add_address_by"
            android:textColor="@color/colorText"
            android:textStyle="bold" />

    </LinearLayout>




    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/money" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/money" />

    </LinearLayout>
    <Button
        android:layout_marginTop="48dp"
        android:id="@+id/button_to_add_new_bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/demo_bg"
        android:lineSpacingExtra="10sp"
        android:text="@string/addbill"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
