<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:background="@color/colorL"
    tools:context="com.example.weige.UI.ForgetPassword">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/forget_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/logo2"
        app:civ_border_width="2dp"
        app:civ_border_color="#FFFBE6"
        />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/id" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_forget_update_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:counterOverflowTextAppearance="@style/TextOverCount"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_forget_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/phone"
                android:inputType="phone"

                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/passwork"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:gravity="center"
            android:id="@+id/text_input_layout_password_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterOverflowTextAppearance="@style/TextOverCount"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_password_forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/passwork" />

        <com.google.android.material.textfield.TextInputLayout
            android:gravity="center"
            android:id="@+id/text_input_layout_password_again_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:counterOverflowTextAppearance="@style/TextOverCount"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_password_again_forget"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/confirm"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <Button
        android:layout_marginTop="48dp"
        android:id="@+id/update_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/demo_bg"
        android:lineSpacingExtra="10sp"
        android:text="@string/sure"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold" />



</LinearLayout>
